add keyboard events

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   </div>
 </footer>
 
-<template id="lodge-template" class="hidden">
+<!-- <template id="lodge-template" class="hidden">
   <div class="dialog__panel">
     <h3 class="lodge__title"></h3>
     <p class="lodge__address"></p>
@@ -276,7 +276,7 @@
     <div class="lodge__photos">
     </div>
   </div>
-</template>
+</template> -->
 <script src="./js/map.js"></script>
 </body>
 </html>
