--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="tokyo">
     <img src="img/main.jpg" alt="Tokyo" width="1200" height="700">
     <div class="tokyo__filters-container">
-      <form action="#" class="tokyo__filters" autocomplete="off">
+      <form class="tokyo__filters" action="/" autocomplete="off" enctype="multipart/form-data">
         <label><select name="housing_type" id="housing_type" class="tokyo__filter">
           <option value="any" selected>Любой тип жилья</option>
           <option value="flat">Квартира</option>
@@ -115,6 +115,7 @@
       </div>
     </div>
     <form class="notice__form"
+          action="https://1510.dump.academy/keksobooking"
           method="post"
           enctype="multipart/form-data"
           autocomplete="off">
@@ -122,7 +123,7 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="title">Заголовок объявления</label>
-            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например">
+            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например" min="30" max="100" required>
           </div>
           <div class="form__row">
             <div class="form__element">
@@ -136,7 +137,7 @@
             </div>
             <div class="form__element">
               <label for="price">Цена за ночь, руб.</label>
-              <input id="price" name="price" type="number" placeholder="5000">
+              <input id="price" name="price" type="number" placeholder="1000" min="0" max="1000000"      maxlength="7" value="1000" required>
             </div>
           </div>
           <div class="form__row">
@@ -152,9 +153,9 @@
             <div class="form__element">
               <label for="capacity">Количество мест</label>
               <select id="capacity" name="capacity">
-                <option value="3" selected>для 3 гостей</option>
+                <option value="3">для 3 гостей</option>
                 <option value="2">для 2 гостей</option>
-                <option value="1">для 1 гостя</option>
+                <option value="1" selected>для 1 гостя</option>
                 <option value="0">не для гостей</option>
               </select>
             </div>
@@ -167,7 +168,7 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="address">Адрес</label>
-            <input id="address" name="address" type="text">
+            <input id="address" name="address" type="text" required>
           </div>
           <div class="form__row">
             <div class="form__element">
