--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="title">Заголовок объявления</label>
-            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например" min="30" max="100" required>
+            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например" minlength="30" maxlength="100" required>
           </div>
           <div class="form__row">
             <div class="form__element">
@@ -278,6 +278,12 @@
     </div>
   </div>
 </template> -->
+
+<script src="./js/util.js"></script>
+<script src="./js/form.js"></script>
+<script src="./js/data.js"></script>
+<script src="./js/card.js"></script>
+<script src="./js/pin.js"></script>
 <script src="./js/map.js"></script>
 </body>
 </html>
