--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
 <script src="./js/form.js"></script>
 <script src="./js/data.js"></script>
 <script src="./js/card.js"></script>
+<script src="./js/dialog.js"></script>
 <script src="./js/pin.js"></script>
 <script src="./js/map.js"></script>
 </body>
