--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   </div>
 </template> -->
 
+<script src="./js/backend.js"></script>
 <script src="./js/util.js"></script>
 <script src="./js/synchronize-fields.js"></script>
 <script src="./js/form.js"></script>
