--- a/index.html
+++ b/index.html
@@ -288,5 +288,6 @@
 <script src="./js/dialog.js"></script>
 <script src="./js/pin.js"></script>
 <script src="./js/map.js"></script>
+<script src="./js/filters.js"></script>
 </body>
 </html>
