--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </select></label>
         <label><select name="housing_price" id="housing_price" class="tokyo__filter">
           <option value="any" selected>Любая</option>
-          <option value="middle" selected>10000 - 50000&#x20bd;</option>
+          <option value="middle">10000 - 50000&#x20bd;</option>
           <option value="low">до 10000&#x20bd;</option>
           <option value="high">от 50000&#x20bd;</option>
         </select></label>
@@ -263,28 +263,11 @@
   </div>
 </footer>
 
-<!-- <template id="lodge-template" class="hidden">
-  <div class="dialog__panel">
-    <h3 class="lodge__title"></h3>
-    <p class="lodge__address"></p>
-    <h3 class="lodge__price"></h3>
-    <h4 class="lodge__type"></h4>
-    <p class="lodge__rooms-and-guests"></p>
-    <p class="lodge__checkin-time"></p>
-    <div class="lodge__features">
-    </div>
-    <p class="lodge__description"></p>
-    <div class="lodge__photos">
-    </div>
-  </div>
-</template> -->
-
 <script src="./js/debounce.js"></script>
 <script src="./js/backend.js"></script>
 <script src="./js/util.js"></script>
 <script src="./js/synchronize-fields.js"></script>
 <script src="./js/form.js"></script>
-<script src="./js/data.js"></script>
 <script src="./js/show-card.js"></script>
 <script src="./js/dialog.js"></script>
 <script src="./js/pin.js"></script>
